batch insert endpoint working as expected.
