# internal/models/Products.go
@@ -2,13 +2,20 @@ package models
 
 type Product struct {
 	IDProduct uint16   `json:"id_product,omitempty"`
-	Name      string   `json:"name,omitempty"`
+	Name      string   `json:"product,omitempty"`
 	Tags      []string `json:"tags,omitempty"`
 }
 
-type ProductsJSON []*Product
-
 type FailedInsertion struct {
-	IDProduct uint16 `json:"id_product,omitempty"`
-	Error     error  `json:"error,omitempty"`
+	IDProduct uint16   `json:"id_product,omitempty"`
+	Tags      []string `json:"tags,omitempty"`
+	Error     error    `json:"error,omitempty"`
+}
+
+type ProductsJSON struct {
+	Products []struct {
+		ID   int      `json:"id"`
+		Name string   `json:"name"`
+		Tags []string `json:"tags"`
+	} `json:"products"`
 }
